--- a/source/_data/link.yml
+++ b/source/_data/link.yml
@@ -31,6 +31,10 @@
       link: https://github.com/jerryc127/hexo-theme-butterfly/issues/76
       avatar: https://fastly.jsdelivr.net/gh/jerryc127/CDN/img/more-butterfly-demo-avatar.png
       descr: 更多使用 Butterfly 的網站
+     - name: KING's Empire
+       link: tonywdy.github.io
+       avatar: https://gitlab.com/KINGWDY/photobed/-/raw/main/pictures/2022/07/12_20_1_3_angyq-oqm2s.png
+       descr: It's my kingdom
     - name: pai233の小窝
       link: https://blog.pai233.top/
       descr: Write Down My Life.
