--- a/source/_data/link.yml
+++ b/source/_data/link.yml
@@ -307,3 +307,7 @@
       link: https://www.ejyuan.fun
       avatar: https://img1.imgtp.com/2022/07/02/O6Bbw780.jpg
       descr: Hi,I am EJ.
+     - name: KINGWDY
+       link: https://tonywdy.github.io
+       avatar: https://www.helloimg.com/images/2022/07/15/Zcc6Vq.png
+       descr: It's my kingdom
